--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./src/output.css">
 </head>
+<style>
+  .disabled{
+  text-decoration: 2px rgb(255, 1, 1) solid line-through;
+  color: rgb(106, 23, 40);
+}
+</style>
 <body class="bg-gray-100 text-white">
   <div class="container mx-auto flex justify-center items-center w-full h-screen bg-gradient-to-r from-[#196019] to-[#1b6b3f]  py-8 ">
     <div class="bg-gradient-to-r from-[#379e37] to-[#23d774] rounded-lg w-[600px]   shadow-2xl p-6">
